--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "flux",
+    "hot",
+    "webpack",
+    "loader"
+  ],
   "author": "Sunil Pai <threepointone@gmail.com>",
   "license": "ISC",
   "dependencies": {
