--- a/package.json
+++ b/package.json
@@ -21,15 +21,5 @@
     "estraverse": "^4.1.0",
     "source-map": "^0.4.2"
   },
-  "devDependencies": {
-    "babel": "^5.4.7",
-    "babel-core": "^5.4.7",
-    "babel-loader": "^5.1.3",
-    "disto": "^1.2.10",
-    "node-libs-browser": "^0.5.2",
-    "react": "^0.13.3",
-    "react-hot-loader": "^1.2.7",
-    "webpack": "^1.9.10",
-    "webpack-dev-server": "^1.9.0"
-  }
+  "devDependencies": {}
 }
