--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "disto-hot-loader",
   "version": "1.0.15",
-  "description": "webpack loader to hot-load stores for disto",
+  "description": "webpack loader to hotload disto stores and actions",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
